test/1.2/errors/T_WBIGUNROLL.dml
/*
  © 2023 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.2;

device test;

/// COMPILE-ONLY
/// NO-CC

data int zero = 0;

parameter zeroes_50 = [$zero, $zero, $zero, $zero, $zero, $zero, $zero, $zero,
                       $zero, $zero, $zero, $zero, $zero, $zero, $zero, $zero,
                       $zero, $zero, $zero, $zero, $zero, $zero, $zero, $zero,
                       $zero, $zero, $zero, $zero, $zero, $zero, $zero, $zero,
                       $zero, $zero, $zero, $zero, $zero, $zero, $zero, $zero,
                       $zero, $zero, $zero, $zero, $zero, $zero, $zero, $zero,
                       $zero, $zero];

// Fiftieth zero is constant
parameter zeroes_51 = [$zero, $zero, $zero, $zero, $zero, $zero, $zero, $zero,
                       $zero, $zero, $zero, $zero, $zero, $zero, $zero, $zero,
                       $zero, $zero, $zero, $zero, $zero, $zero, $zero, $zero,
                       $zero, $zero, $zero, $zero, $zero, $zero, $zero, $zero,
                       $zero, $zero, $zero, $zero, $zero, $zero, $zero, $zero,
                       $zero, $zero, $zero, $zero, $zero, $zero, $zero, $zero,
                       $zero, 0, $zero];

bank b {
    register regs[i in 0..50] size 4 @ undefined;
}

method init {
    local int i;

    // no warning
    foreach x in ($zeroes_50) assert true;
    // The else branch is not considered an iteration
    select x in ($zeroes_50) where (x == i) {
        assert true;
    } else assert true;

    /// WARNING WBIGUNROLL
    foreach x in ($zeroes_51) assert true;
    /// WARNING WBIGUNROLL
    select x in ($zeroes_51) where (x == i) {
        assert true;
    } else assert true;

    // no warning
    foreach x in ($zeroes_51) {
        // As fiftieth bit is constant 0, DML 1.2 semantics eliminates this if
        // entirely, and subsequently causes that iteration to be omitted from
        // codegen entirely; reducing the total count to 50
        if (x != 0) assert true;
    }

    // As fiftieth bit is constant 0, select can cut short at it, reducing the
    // total number of iterations to 50
    select x in ($zeroes_50) where (x == 0) {
        assert true;
    } else assert true;

    // As fiftieth bit is constant 0, select can omit the check and thus
    // iteration for it, reducing the total number of iterations to 50
    select x in ($zeroes_50) where (x == 1) {
        assert true;
    } else assert true;


    // WBIGUNROLL is only reported for compile-time lists defined via list
    // syntax, not the object lists generated by DMLC
    // no warning
    foreach x in ($b.unmapped_registers) assert true;
    select x in ($b.unmapped_registers) where (i == 0) {
        assert true;
    } else assert true;
}
